expand when typing - avoid annoying collapsing

--- a/src/App.css
+++ b/src/App.css
@@ -86,14 +86,16 @@ textarea {
   color: whitesmoke;
 }
 
-textarea, .react-markdown {
+textarea,
+.react-markdown {
   border: none;
   border-radius: 0.5em;
   padding: 0.5em;
   margin: 0.5em;
 }
 
-textarea:hover {
+textarea:hover,
+textarea.expand {
   border-radius: 0;
   min-height: 10em;
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
